# HOW TO PUBLISH...
#
# Prep Work (ensure need modules are up-to-date):
#   sudo pacman -Syu python-pip
#   sudo pacman -Syu python-build
#   sudo pacman -Syu python-twine
#   -- antiquated way
#      python3 -m pip install --upgrade pip
#      python3 -m pip install --upgrade build
#      python3 -m pip install --upgrade twine
#
# Run w/o install from project dir
#   S=$PWD/src
#   PYTHONPATH=$S python3 src/rungs/main.py
# 
# Run with local install
#   rm -r dist; python3 -m build; ls dist/. ; pip install -e . --break-system-packages
# 
# PUBLIC Build and deploy (from project directory):
#   ## BUMP the version (below in [project])
#   rm -r dist; python3 -m build; ls dist/. ; python3 -m twine upload dist/*
#     ## Enter __token__ and the saved TOKEN (in bitwarden)
#   pipx upgrade rungs || pipx install rungs # >= python3.11
#   --OR-- sudo python3 -m pip install rungs # <= python3.10
#   ## VISIT  https://pypi.org/project/rungs and delete old versions
#
# TEST Build and test (from project directory):
#   ## BUMP the version (below in [project])
#   rm -r dist; python3 -m build
#   python3 -m twine upload --repository testpypi dist/*
#     ## Enter __token__ and the saved TOKEN (in bitwarden)
#   sudo python3 -m pip install --index-url https://test.pypi.org/simple/ --no-deps rungs
#   ## VISIT  https://test.pypi.org/project/rungs and delete old versions

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "1.0.11"
name = "rungs"
authors = [
    {name = "Joe Defen", email = "joedef@gmail.com"},
]
description = "Menu for Fuzzy Linux Procedures"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["menu", "maintenance", "procedure", "fuzzy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux"
]

[project.scripts]
rungs = "rungs.main:run"

[tool.hatch.build.targets.wheel]
packages = ["rungs"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/rungs/__pycache__",
]

[project.urls]
"Homepage" = "https://github.com/joedefen/rungs"
"Bug Tracker" = "https://github.com/joedefen/rungs/issues"
